refactor: ajustar cambios de propiedades
