# openapi/openapi.json
@@ -968,39 +968,7 @@
       },
       "get": {
         "operationId": "SubjectController_findAll",
-        "parameters": [],
-        "responses": {
-          "default": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ResponseSubjectDto"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "tags": [
-          "subject"
-        ]
-      }
-    },
-    "/subject/department/{id}": {
-      "get": {
-        "operationId": "SubjectController_findAllDepartment",
         "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "number"
-            }
-          },
           {
             "name": "semester",
             "required": false,
@@ -1008,42 +976,17 @@
             "schema": {
               "type": "number"
             }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ResponseSubjectDto"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "tags": [
-          "subject"
-        ]
-      }
-    },
-    "/subject/career/{id}": {
-      "get": {
-        "operationId": "SubjectController_findAllCareer",
-        "parameters": [
+          },
           {
-            "name": "id",
-            "required": true,
-            "in": "path",
+            "name": "careerId",
+            "required": false,
+            "in": "query",
             "schema": {
               "type": "number"
             }
           },
           {
-            "name": "semester",
+            "name": "departmentId",
             "required": false,
             "in": "query",
             "schema": {
@@ -1407,6 +1350,22 @@
             "schema": {
               "type": "number"
             }
+          },
+          {
+            "name": "careerId",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "departmentId",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
           }
         ],
         "responses": {
@@ -1749,37 +1708,29 @@
       },
       "get": {
         "operationId": "ClassroomController_findAll",
-        "parameters": [],
-        "responses": {
-          "default": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ResponseClassroomDto"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "tags": [
-          "classroom"
-        ]
-      }
-    },
-    "/classroom/department/{id}": {
-      "get": {
-        "operationId": "ClassroomController_findAllDepartment",
         "parameters": [
           {
-            "name": "id",
-            "required": true,
-            "in": "path",
+            "name": "classroomId",
+            "required": false,
+            "in": "query",
             "schema": {
               "type": "number"
+            }
+          },
+          {
+            "name": "departmentId",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "status",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "boolean"
             }
           }
         ],
@@ -2085,6 +2036,10 @@
   "servers": [],
   "components": {
     "schemas": {
+      "Department": {
+        "type": "object",
+        "properties": {}
+      },
       "CreateCareerDto": {
         "type": "object",
         "properties": {
@@ -2100,8 +2055,8 @@
           "abbreviation": {
             "type": "string"
           },
-          "departmentId": {
-            "type": "number"
+          "department": {
+            "$ref": "#/components/schemas/Department"
           },
           "status": {
             "type": "boolean"
@@ -2110,13 +2065,9 @@
         "required": [
           "name",
           "abbreviation",
-          "departmentId",
+          "department",
           "status"
         ]
-      },
-      "Department": {
-        "type": "object",
-        "properties": {}
       },
       "ResponseCareerDto": {
         "type": "object",
@@ -2170,8 +2121,8 @@
           "abbreviation": {
             "type": "string"
           },
-          "departmentId": {
-            "type": "number"
+          "department": {
+            "$ref": "#/components/schemas/Department"
           },
           "status": {
             "type": "boolean"
@@ -2345,6 +2296,10 @@
           }
         }
       },
+      "Teacher": {
+        "type": "object",
+        "properties": {}
+      },
       "CreateUserDto": {
         "type": "object",
         "properties": {
@@ -2354,31 +2309,27 @@
           "role": {
             "type": "string"
           },
-          "teacherId": {
-            "type": "number"
+          "teacher": {
+            "$ref": "#/components/schemas/Teacher"
           },
           "status": {
             "type": "boolean"
           },
-          "schoolId": {
-            "type": "number"
+          "school": {
+            "$ref": "#/components/schemas/School"
           },
-          "departmentId": {
-            "type": "number"
+          "department": {
+            "$ref": "#/components/schemas/Department"
           }
         },
         "required": [
           "email",
           "role",
-          "teacherId",
+          "teacher",
           "status",
-          "schoolId",
-          "departmentId"
+          "school",
+          "department"
         ]
-      },
-      "Teacher": {
-        "type": "object",
-        "properties": {}
       },
       "UserRespondeDto": {
         "type": "object",
@@ -2440,17 +2391,17 @@
           "role": {
             "type": "string"
           },
-          "teacherId": {
-            "type": "number"
+          "teacher": {
+            "$ref": "#/components/schemas/Teacher"
           },
           "status": {
             "type": "boolean"
           },
-          "schoolId": {
-            "type": "number"
+          "school": {
+            "$ref": "#/components/schemas/School"
           },
-          "departmentId": {
-            "type": "number"
+          "department": {
+            "$ref": "#/components/schemas/Department"
           }
         }
       },
@@ -2671,16 +2622,16 @@
           "type_curriculum": {
             "type": "number"
           },
-          "departmentId": {
-            "type": "number"
+          "department": {
+            "$ref": "#/components/schemas/Department"
           },
           "status": {
             "type": "boolean"
           },
-          "careerIds": {
+          "careers": {
             "type": "array",
             "items": {
-              "type": "number"
+              "type": "string"
             }
           }
         },
@@ -2691,14 +2642,10 @@
           "hours",
           "semester",
           "type_curriculum",
-          "departmentId",
+          "department",
           "status",
-          "careerIds"
+          "careers"
         ]
-      },
-      "Career": {
-        "type": "object",
-        "properties": {}
       },
       "ResponseSubjectDto": {
         "type": "object",
@@ -2745,7 +2692,7 @@
           "careers": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/Career"
+              "type": "array"
             }
           }
         },
@@ -2788,16 +2735,16 @@
           "type_curriculum": {
             "type": "number"
           },
-          "departmentId": {
-            "type": "number"
+          "department": {
+            "$ref": "#/components/schemas/Department"
           },
           "status": {
             "type": "boolean"
           },
-          "careerIds": {
+          "careers": {
             "type": "array",
             "items": {
-              "type": "number"
+              "type": "string"
             }
           }
         }
@@ -2817,8 +2764,8 @@
           "email": {
             "type": "string"
           },
-          "departmentId": {
-            "type": "number"
+          "department": {
+            "$ref": "#/components/schemas/Department"
           },
           "status": {
             "type": "boolean"
@@ -2827,7 +2774,7 @@
         "required": [
           "id_document",
           "first_name",
-          "departmentId",
+          "department",
           "status"
         ]
       },
@@ -2883,13 +2830,21 @@
           "email": {
             "type": "string"
           },
-          "departmentId": {
-            "type": "number"
+          "department": {
+            "$ref": "#/components/schemas/Department"
           },
           "status": {
             "type": "boolean"
           }
         }
+      },
+      "Subject": {
+        "type": "object",
+        "properties": {}
+      },
+      "Period": {
+        "type": "object",
+        "properties": {}
       },
       "CreateSectionDto": {
         "type": "object",
@@ -2900,14 +2855,14 @@
           "name": {
             "type": "string"
           },
-          "subjectId": {
-            "type": "number"
+          "subject": {
+            "$ref": "#/components/schemas/Subject"
           },
-          "periodId": {
-            "type": "number"
+          "period": {
+            "$ref": "#/components/schemas/Period"
           },
-          "teacherId": {
-            "type": "number"
+          "teacher": {
+            "$ref": "#/components/schemas/Teacher"
           },
           "status": {
             "type": "boolean"
@@ -2916,19 +2871,11 @@
         "required": [
           "capacity",
           "name",
-          "subjectId",
-          "periodId",
-          "teacherId",
+          "subject",
+          "period",
+          "teacher",
           "status"
         ]
-      },
-      "Subject": {
-        "type": "object",
-        "properties": {}
-      },
-      "Period": {
-        "type": "object",
-        "properties": {}
       },
       "ResponseSectionDto": {
         "type": "object",
@@ -2986,54 +2933,19 @@
           "name": {
             "type": "string"
           },
-          "subjectId": {
-            "type": "number"
+          "subject": {
+            "$ref": "#/components/schemas/Subject"
           },
-          "periodId": {
-            "type": "number"
+          "period": {
+            "$ref": "#/components/schemas/Period"
           },
-          "teacherId": {
-            "type": "number"
+          "teacher": {
+            "$ref": "#/components/schemas/Teacher"
           },
           "status": {
             "type": "boolean"
           }
         }
-      },
-      "CreateScheduleDto": {
-        "type": "object",
-        "properties": {
-          "start": {
-            "type": "string"
-          },
-          "end": {
-            "type": "string"
-          },
-          "classroomId": {
-            "type": "number"
-          },
-          "dayId": {
-            "type": "number"
-          },
-          "sectionId": {
-            "type": "number"
-          },
-          "periodId": {
-            "type": "number"
-          },
-          "status": {
-            "type": "boolean"
-          }
-        },
-        "required": [
-          "start",
-          "end",
-          "classroomId",
-          "dayId",
-          "sectionId",
-          "periodId",
-          "status"
-        ]
       },
       "Classroom": {
         "type": "object",
@@ -3046,6 +2958,41 @@
       "Section": {
         "type": "object",
         "properties": {}
+      },
+      "CreateScheduleDto": {
+        "type": "object",
+        "properties": {
+          "start": {
+            "type": "string"
+          },
+          "end": {
+            "type": "string"
+          },
+          "classroom": {
+            "$ref": "#/components/schemas/Classroom"
+          },
+          "day": {
+            "$ref": "#/components/schemas/Day"
+          },
+          "section": {
+            "$ref": "#/components/schemas/Section"
+          },
+          "period": {
+            "$ref": "#/components/schemas/Period"
+          },
+          "status": {
+            "type": "boolean"
+          }
+        },
+        "required": [
+          "start",
+          "end",
+          "classroom",
+          "day",
+          "section",
+          "period",
+          "status"
+        ]
       },
       "ResponseScheduleDto": {
         "type": "object",
@@ -3111,17 +3058,17 @@
           "end": {
             "type": "string"
           },
-          "classroomId": {
-            "type": "number"
+          "classroom": {
+            "$ref": "#/components/schemas/Classroom"
           },
-          "dayId": {
-            "type": "number"
+          "day": {
+            "$ref": "#/components/schemas/Day"
           },
-          "sectionId": {
-            "type": "number"
+          "section": {
+            "$ref": "#/components/schemas/Section"
           },
-          "periodId": {
-            "type": "number"
+          "period": {
+            "$ref": "#/components/schemas/Period"
           },
           "status": {
             "type": "boolean"
@@ -3140,7 +3087,7 @@
           "type": {
             "type": "string"
           },
-          "departmentIds": {
+          "departments": {
             "type": "array",
             "items": {
               "type": "number"
@@ -3153,7 +3100,7 @@
         "required": [
           "name",
           "type",
-          "departmentIds",
+          "departments",
           "status"
         ]
       },
@@ -3175,13 +3122,13 @@
           "departmentIds": {
             "type": "array",
             "items": {
-              "type": "number"
+              "type": "string"
             }
           },
           "departments": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/Department"
+              "type": "string"
             }
           },
           "status": {
@@ -3209,7 +3156,7 @@
           "type": {
             "type": "string"
           },
-          "departmentIds": {
+          "departments": {
             "type": "array",
             "items": {
               "type": "number"
@@ -3252,6 +3199,15 @@
           },
           "loginStamp": {
             "type": "number"
+          },
+          "school": {
+            "$ref": "#/components/schemas/School"
+          },
+          "department": {
+            "$ref": "#/components/schemas/Department"
+          },
+          "teacher": {
+            "$ref": "#/components/schemas/Teacher"
           }
         },
         "required": [
@@ -3259,7 +3215,10 @@
           "id",
           "name",
           "role",
-          "loginStamp"
+          "loginStamp",
+          "school",
+          "department",
+          "teacher"
         ]
       },
       "RecoveryPasswordDto": {
