# src/repositories/subject/dto/get-subjects-department.dto.ts
@@ -8,4 +8,14 @@ export class GetSubjectDepartmentDto {
   @IsOptional()
   @Type(() => Number)
   semester?: number;
+
+  @ApiPropertyOptional()
+  @IsOptional()
+  @Type(() => Number)
+  careerId?: number;
+
+  @ApiPropertyOptional()
+  @IsOptional()
+  @Type(() => Number)
+  departmentId?: number;
 }
